bad/method_call_non_class_type_bool.example_compiler_output
ERROR
[1mbad/method_call_non_class_type_bool.lat:3:7: [1;31merror: [0;1mnon-class type `boolean` has no methods[m
	false.foo();
	     [1;32m^[m
